--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php":">=5.5",
-        "zendframework/zend-permissions-acl":"~2.3",
+        "zendframework/zend-permissions-acl":"*",
         "chippyash/strong-type": "~2.0",
         "chippyash/builderpattern": "~1.0"
     },
