BC Break: change chippyash\Zend\Acl namespace to Chippyash\Zend\Acl

--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,16 @@
     "require": {
         "php":">=5.5",
         "zendframework/zend-permissions-acl":"*",
-        "chippyash/strong-type": "~2.0",
-        "chippyash/builderpattern": "~1.0"
+        "chippyash/strong-type": "~3",
+        "chippyash/builderpattern": "~2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3.0",
-        "satooshi/php-coveralls" : "dev-master",
-        "phpunit/phpunit-skeleton-generator": "~2.0.1",
-        "apigen/apigen": "2.8.1"
+        "satooshi/php-coveralls" : "dev-master"
     },
     "autoload": {
         "psr-0": {
-            "chippyash\\Zend\\Acl\\": "src"
+            "Chippyash\\Zend\\Acl\\": "src"
         }
     }
 }
