moved from coveralls to codeclimate

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,20 @@ language: php
 php:
   # aliased to a recent 5.5.x version
   - 5.5
+  # aliased to a recent 5.6.x version
+  - 5.6
   # hhvm
   #- hhvm
 
-# omitting "script:" will default to phpunit
-# use the $DB env variable to determine the phpunit.xml to use
 before_script:
-  # - echo "extension = gmp.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - composer install --dev --no-interaction
+  - composer install --no-interaction
   - mkdir -p build/logs
 
 script:
-  - vendor/phpunit/phpunit/phpunit --configuration phpunit.travis.xml --coverage-clover build/logs/clover.xml
+  - vendor/bin/phpunit --configuration phpunit.travis.xml --coverage-clover build/logs/clover.xml
 
 after_success:
-    - php vendor/bin/coveralls -v
+  - vendor/bin/test-reporter
 
 # configure notifications (email, IRC, campfire etc)
 notifications:
