--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     ],
     "require": {
         "php":">=5.5",
-        "zendframework/zend-permissions-acl":"*",
-        "chippyash/strong-type": "~3",
-        "chippyash/builderpattern": "~2"
+      "zendframework/zend-permissions-acl": ">=2.6.0, <2.7.0",
+      "chippyash/strong-type": ">=3.0.2,<4",
+      "chippyash/builderpattern": ">=2.0.3,<3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3.0",
