--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "chippyash/zend-acl-xml-builder",
   "description": "Configuration of Zend 2 Acl instances using XML",
   "homepage": "http://zf4.biz/packages?utm_source=packagist&utm_medium=web&utm_campaign=blinks&utm_content=zendaclxmlbuilder",
-  "license": "GPL-3.0-or-later",
+  "license": "BSD-3-Clause",
   "keywords": [
     "zend",
     "acl",
